--- a/XperiaParts/res/xml/preferences_xperia_menu.xml
+++ b/XperiaParts/res/xml/preferences_xperia_menu.xml
@@ -68,6 +68,18 @@
                  android:targetPackage="com.motorola.dolby.dolbyui"
                  android:targetClass="com.motorola.dolby.dolbyui.MotoMainActivity" />
         </Preference>
+
+       <Preference
+            android:key="audio_threesixtyra"
+            android:summary="@string/threesixtyra_summary"
+            android:icon="@drawable/ic_threesixtyra"
+            android:title="@string/threesixtyra_setting_header"
+            android:persistent="false">
+            <intent
+                 android:targetPackage="jp.co.sony.threesixtyra.lite"
+                 android:targetClass="ru.g000sha256.bass_booster.MainActivity" />
+        </Preference>
+
     </PreferenceCategory>
 
 </PreferenceScreen>
