parts: update dolby package
* We're now using Sony's DaxUI interface instead of Moto's
Signed-off-by: saku-bruh <notwolfyy@gmail.com>

--- a/XperiaParts/res/xml/preferences_xperia_menu.xml
+++ b/XperiaParts/res/xml/preferences_xperia_menu.xml
@@ -65,8 +65,8 @@
             android:summary="@string/dolby_summary"
             android:persistent="false">
             <intent
-                 android:targetPackage="com.motorola.dolby.dolbyui"
-                 android:targetClass="com.motorola.dolby.dolbyui.MotoMainActivity" />
+                 android:targetPackage="com.dolby.daxappui2"
+                 android:targetClass="com.dolby.daxappui2.MainActivity" />
         </Preference>
 
        <Preference
