parts: launch correct external monitor activity
* The reason External Monitor didn't work for us is because Sony designed the app to expose it's activities ONLY after the switch inside the switch inside the "settings.SettingsAppLauncherActivity" is turned on hence by doing this we will be able to successfully use the External Monitor app
* Also added . at the end of sentences for consistency across the menus
* Cleaned up some errors

Signed-off-by: saku-bruh <notwolfyy@gmail.com>

--- a/XperiaParts/res/values/integers.xml
+++ b/XperiaParts/res/values/integers.xml
@@ -16,11 +16,12 @@
   -->
 
 <resources>
+    <!-- Min - Max Charge Percentage -->
     <integer name="charging_control_default">100</integer>
     <integer name="charging_control_max">100</integer>
     <integer name="charging_control_min">50</integer>
 
-    <!-- Min - Max refresh rate -->
+    <!-- Min - Max Refresh Rate -->
     <integer name="config_defaultRefreshRate">-1</integer>
     <integer name="config_defaultPeakRefreshRate">0</integer>
 </resources>
