--- a/XperiaParts/res/xml/preferences_xperia_menu.xml
+++ b/XperiaParts/res/xml/preferences_xperia_menu.xml
@@ -32,7 +32,7 @@
             android:persistent="false">
             <intent
                  android:targetPackage="com.sonymobile.extmonitorapp"
-                 android:targetClass="com.sonymobile.extmonitorapp.MonitorProActivity" />
+                 android:targetClass="com.sonymobile.extmonitorapp.settings.SettingsAppLauncherActivity" />
         </Preference>
 
     </PreferenceCategory>
@@ -66,7 +66,7 @@
     </PreferenceCategory>
 
     <PreferenceCategory
-        android:key="c"
+        android:key="charging"
         android:title="@string/charging_title">
 
         <Preference
