--- a/XperiaParts/res/xml/preferences_xperia_menu.xml
+++ b/XperiaParts/res/xml/preferences_xperia_menu.xml
@@ -111,4 +111,21 @@
 
     </PreferenceCategory>
 
+    <PreferenceCategory
+        android:key="gc"
+        android:title="@string/gc_title">
+
+       <Preference
+            android:key="gc_dsm_settings"
+            android:icon="@drawable/ic_gc_dsm"
+            android:title="@string/gc_dsm_setting_header"
+            android:summary="@string/gc_dsm_setting_summary"
+            android:persistent="false">
+            <intent
+                 android:targetPackage="com.sonymobile.dualshockmanager"
+                 android:targetClass="com.sonymobile.dualshockmanager.Ds4SetUpActivity" />
+        </Preference>
+
+    </PreferenceCategory>
+
 </PreferenceScreen>
