parts: drawable: fix vector icons positioning
* All of the menu icons are now all positioned correctly

Signed-off-by: saku-bruh <notwolfyy@gmail.com>

--- a/XperiaParts/res/drawable/ic_dolby.xml
+++ b/XperiaParts/res/drawable/ic_dolby.xml
@@ -10,5 +10,5 @@
     android:tint="?attr/colorControlNormal">
     <path 
         android:fillColor="#ff000000"
-        android:pathData="M2,5V19H22V5H2M6,17H4V7H6C8.86,7.09 11.1,9.33 11,12C11.1,14.67 8.86,16.91 6,17M20,17H18C15.14,16.91 12.9,14.67 13,12C12.9,9.33 15.14,7.09 18,7H20V17Z"/>
+        android:pathData="M 2 5 L 2 19 L 22 19 L 22 5 L 2 5 M 6 17 L 4 17 L 4 7 L 6 7 C 8.86 7.09 11.1 9.33 11 12 C 11.1 14.67 8.86 16.91 6 17 M 20 17 L 18 17 C 15.14 16.91 12.9 14.67 13 12 C 12.9 9.33 15.14 7.09 18 7 L 20 7 L 20 17 Z"/>
 </vector>
