--- a/XperiaParts/res/drawable/ic_threesixtyra.xml
+++ b/XperiaParts/res/drawable/ic_threesixtyra.xml
@@ -10,5 +10,5 @@
     android:tint="?attr/colorControlNormal">
     <path
         android:fillColor="#ff000000"
-        android:pathData="M12,1C7,1 3,5 3,10V17A3,3 0 0,0 6,20H9V12H5V10A7,7 0 0,1 12,3A7,7 0 0,1 19,10V12H15V20H18A3,3 0 0,0 21,17V10C21,5 16.97,1 12,1Z"/>
+        android:pathData="M 12 1 C 7 1 3 5 3 10 L 3 17 C 3 18.66 4.34 20 6 20 L 9 20 L 9 12 L 5 12 L 5 10 C 5 6.13 8.13 3 12 3 C 15.87 3 19 6.13 19 10 L 19 12 L 15 12 L 15 20 L 18 20 C 19.66 20 21 18.66 21 17 L 21 10 C 21 5 16.97 1 12 1 Z"/>
 </vector>
