parts: add footer text to the cmode menu
Signed-off-by: saku-bruh <notwolfyy@gmail.com>

--- a/XperiaParts/res/xml/advanced_disp_settings.xml
+++ b/XperiaParts/res/xml/advanced_disp_settings.xml
@@ -21,4 +21,9 @@
         />
     </PreferenceCategory>
 
+    <com.android.settingslib.widget.FooterPreference
+        android:key="display_setting_footer"
+        android:title="@string/cm_setting_explained"
+        android:selectable="false" />
+
 </PreferenceScreen>
