--- a/XperiaParts/res/xml/advanced_charger_settings.xml
+++ b/XperiaParts/res/xml/advanced_charger_settings.xml
@@ -9,6 +9,11 @@
         android:key="charger_top_intro"
         android:title="@string/advanced_charger_setting_summary"/>
 
+    <com.android.settingslib.widget.LayoutPreference
+        android:key="battery_care_preview"
+        android:layout="@layout/battery_care_view"
+        android:selectable="false" />
+
     <com.android.settingslib.widget.MainSwitchPreference
         android:defaultValue="false"
         android:key="charger_setting_main_enable"
