parts: add rounded cmode images
* Now the images properly scale with the device's DPI (atleast until tablet DPI but most people don't use that high of a DPI) and have a good amount of side padding

Signed-off-by: saku-bruh <notwolfyy@gmail.com>

--- a/XperiaParts/res/layout/color_mode_view3.xml
+++ b/XperiaParts/res/layout/color_mode_view3.xml
@@ -27,7 +27,10 @@
             android:id="@+id/image3"
             android:layout_width="match_parent"
             android:layout_height="@dimen/color_mode_preview_height"
-            android:scaleType="centerCrop"
+            android:scaleType="centerInside"
+            android:adjustViewBounds="true"
+            android:layout_marginLeft="15dp"
+            android:layout_marginRight="15dp"
             android:cropToPadding="true"
             android:src="@drawable/color_mode_preview3"
             android:contentDescription="@null" />
