parts: change controller string
* In the future we can add here gaming related options so it's better if we generalize it to shift from the term "Game Controller" to a more inclusive "Gaming" for the category title.

Signed-off-by: saku-bruh <notwolfyy@gmail.com>

--- a/XperiaParts/res/xml/preferences_xperia_menu.xml
+++ b/XperiaParts/res/xml/preferences_xperia_menu.xml
@@ -90,8 +90,8 @@
     </PreferenceCategory>
 
     <PreferenceCategory
-        android:key="gc"
-        android:title="@string/gc_title">
+        android:key="gaming"
+        android:title="@string/gaming_title">
 
        <Preference
             android:key="gc_dsm_settings"
