parts: add menu entry for upmix personalization activty
* We're now using 360 Reality Audio Upmix from stock (just for the personalization menu, for now)

Signed-off-by: saku-bruh <notwolfyy@gmail.com>

--- a/XperiaParts/res/xml/advanced_audio_settings.xml
+++ b/XperiaParts/res/xml/advanced_audio_settings.xml
@@ -28,6 +28,17 @@
             android:summary="@string/threesixtyra_setting_summary"
             android:persistent="false">
             <intent
+                android:targetPackage="jp.co.sony.threesixtyra.settings"
+                android:targetClass="jp.co.sony.threesixtyra.settings.introduction.Introduction360raActivity" />
+        </Preference>
+
+        <Preference
+            android:key="audio_threesixtyupmix"
+            android:icon="@drawable/ic_threesixtyupmix"
+            android:title="@string/threesixtyupmix_setting_header"
+            android:summary="@string/threesixtyupmix_setting_summary"
+            android:persistent="false">
+            <intent
                 android:targetPackage="jp.co.sony.threesixtyra.lite"
                 android:targetClass="ru.g000sha256.bass_booster.MainActivity" />
         </Preference>
