XperiaParts: Go back to org.lineageos.settings.device
* Genericify

Change-Id: I134b4b14d6b19c5c703f000df957880a70bfad37

--- a/packages/XperiaParts/res/xml/advanced_charger_settings.xml
+++ b/packages/XperiaParts/res/xml/advanced_charger_settings.xml
@@ -22,7 +22,7 @@
         android:persistent="false"
         android:dependency="charger_setting_main_enable" />
 
-    <com.xperia.parts.widgets.CustomSeekBarPreference
+    <org.lineageos.settings.device.widgets.CustomSeekBarPreference
         android:key="device_charging_control"
         android:title="@string/device_charging_control_title"
         android:defaultValue="@integer/charging_control_default"
